--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -4,7 +4,27 @@ body {
     padding: 0;
     width: 100%;
     height: 100%;
-    background-color: #64263a
+/*    background-color: #64263a*/
+}
+
+canvas {
+    display : block;
+    margin: auto;
+    margin-top: 2%;
+}
+
+.subtitles {
+    position: absolute;
+    top: 60%;
+}
+
+.subtitle_text {
+    width: 50%;
+    /*left: 30%;
+    right: 30%;*/
+    margin-left: 25%;
+    font-family: 'Chelsea Market';
+    font-size: 24pt;
 }
 
 #backArrow {
@@ -54,7 +74,3 @@ body {
     background-position: center center;
     display:none;
 }*/
-
-#gameHolder {
-    position: absolute;
-}
